# clox

./: .gitignore  meson.build
include/: clox.h  luis.h
src/: chunk.c  chunk.cpp  chunk.h  common.h  compiler.c  compiler.cpp  compiler.h  debug.c  debug.cpp  debug.h  main.cpp  memory.c  memory.cpp  memory.h  object.c  object.cpp  object.h  scanner.c  scanner.cpp  scanner.h  table.c  table.cpp  table.h  value.c  value.h  vm.c  vm.cpp  vm.h
test/: brew.lox  class.lox  fib.lox  fib.lua  fib.luis  for.lox  fun.lox  printfn.lox  test.lox  test2.lox
